# idfpyuseful

./: .gitignore  README.md
wifisimple/: .gitignore  CMakeLists.txt
wifisimple/main/: CMakeLists.txt  main.c
